/*
  Created by  : Vivek Kumar
  Created on  : 30/06/2020
  Purpose     : proto file
 */
syntax = "proto3";

option java_package = "altran.address.protobuf";

message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }
  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }
  repeated PhoneNumber phones = 4;
}

message AddressBook {
  repeated Person people = 1;
}